<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewmodel"
            type="me.sv.route.viewmodel.MapsActivityViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <fragment
            android:id="@+id/map"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@+id/cl_bottom_container"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:context=".view.MapsActivity" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_bottom_container"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent">

            <TextView
                android:id="@+id/tv_a_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/location_a"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                app:layout_constraintLeft_toLeftOf="@+id/edt_a_point"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_b_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/location_b"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                app:layout_constraintLeft_toLeftOf="@+id/edt_b_point"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/edt_a_point"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/tap_to_selects_bg"
                android:ellipsize="end"
                android:lines="1"
                android:padding="4dp"
                android:textSize="12sp"
                app:layout_constraintHorizontal_chainStyle="spread"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@+id/edt_b_point"
                app:layout_constraintTop_toBottomOf="@+id/tv_a_label"
                app:setPoint="@{viewmodel.APoint}" />

            <TextView
                android:id="@+id/edt_b_point"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/tap_to_selects_bg"
                android:ellipsize="end"
                android:lines="1"
                android:padding="4dp"
                android:textSize="12sp"
                app:layout_constraintLeft_toRightOf="@+id/edt_a_point"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="@+id/edt_a_point"
                app:setPoint="@{viewmodel.BPoint}" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_generate_route"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:enabled="@{viewmodel.allPointsSelected}"
                android:onClick="@{() -> viewmodel.onCreateRouteClick()}"
                android:text="@string/generate_route"
                android:textColor="@android:color/white"
                app:backgroundTint="@color/color_dark_gray"
                app:layout_constraintLeft_toLeftOf="@+id/edt_a_point"
                app:layout_constraintRight_toRightOf="@+id/edt_b_point"
                app:layout_constraintTop_toBottomOf="@+id/edt_a_point" />

            <View
                android:id="@+id/divider"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:background="@color/color_light_gray"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btn_generate_route" />

            <TextView
                android:id="@+id/tv_distance_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:text="@string/distance"
                android:textColor="@color/color_dark_gray"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="@+id/btn_generate_route"
                app:layout_constraintTop_toTopOf="@+id/divider" />

            <TextView
                android:id="@+id/tv_distance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:textSize="16sp"
                app:distance="@{viewmodel.distanceLiveData}"
                app:layout_constraintBottom_toBottomOf="@+id/tv_distance_label"
                app:layout_constraintLeft_toRightOf="@+id/tv_distance_label"
                app:layout_constraintTop_toTopOf="@+id/tv_distance_label" />

            <TextView
                android:id="@+id/tv_time_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="8dp"
                android:text="@string/time"
                android:textColor="@color/color_dark_gray"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/tv_distance_label"
                app:layout_constraintRight_toLeftOf="@+id/tv_time"
                app:layout_constraintTop_toTopOf="@+id/tv_distance_label" />

            <TextView
                android:id="@+id/tv_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="@+id/tv_distance_label"
                app:layout_constraintRight_toRightOf="@+id/btn_generate_route"
                app:layout_constraintTop_toTopOf="@+id/tv_distance_label"
                app:setTime="@{viewmodel.timeLiveData}" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>